RestTemplate replaced by WebClient